--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   animated_notch_bottom_bar: ^1.0.0
   animated_bottom_navigation_bar: ^1.3.3
   circular_menu: ^2.0.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
