--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   circular_menu: ^2.0.1
   fluttertoast: ^8.2.4
+  intl: ^0.17.0
+  timeago: 
+  flutter_spinkit: ^5.2.0
+  dash_chat_2:
+  chat_gpt_sdk: 
 
 dev_dependencies:
   flutter_test:
